asterisk (1:1.4.21.2~dfsg-2) UNRELEASED; urgency=low

  * Depend on debhelper >=5 on backport etch.

 -- Victor Seva <linuxmaniac@torreviejawireless.org>  Thu, 24 Jul 2008 21:00:20 +0200

asterisk (1:1.4.21.2~dfsg-1) unstable; urgency=high

  [ Victor Seva ]
  * asterisk.postinst should always check group memberships (Closes:
    #486097) patch by Tim Retout <tim@retout.co.uk>
  * changed libc-client2007-dev to libc-client2007b-dev on Build-Depends
    (fixes FTBFS).

  [ Tzafrir Cohen ]
  * Depend on debhelper >= 6.0.7 due to dh_lintian (Closes: #492202).
  * New upstream bugfix release. Fixes CVE-2008-3263 and CVE-2008-3264.

  [ Faidon Liambotis ]
  * Do a quilt refresh on all patches.
  * Remove the dh_makeshlibs call as it is unneeded and generates a lintian
    warning.

 -- Faidon Liambotis <paravoid@debian.org>  Thu, 24 Jul 2008 19:51:20 +0300

asterisk (1:1.4.21.1~dfsg-1) unstable; urgency=low

  [ Tzafrir Cohen ]
  * New upstream bugfix release.
  * Fix get-orig-source target to remove temporary files left in that tarball.
  * The asterisk.h symlink moved to asterisk-dev where it should be.

  [ Mark Purcell ]
  * asterisk-dev Replaces: asterisk (<< 1:1.4.21.1~dfsg-1)
  * lintian cleanup: debian-copyright-line-too-long
  * Call dh_lintian lintian-cleanup: package-contains-empty-directory

 -- Mark Purcell <msp@debian.org>  Wed, 16 Jul 2008 21:14:10 +1000

asterisk (1:1.4.21~dfsg-1) unstable; urgency=low

  * New upstream release. 
  * bison no longer needed to build Asterisk (Since 1.4.0).
  * Patch armel_support applied upstream.
  * Patches bristuff/zapata-gsm and bristuff/zapata-bri+euroisdn adjusted to 
    chan_zap changes (conf became a pointer in mkintf).

 -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Thu, 12 Jun 2008 21:30:40 +0300

asterisk (1:1.4.20~dfsg-1) unstable; urgency=low

  [ Victor Seva ]
  * Patch sample files pointing now to the correct doc files. (Closes: #475681)
  * Added support for armel, thanks to Riku Voipio. (Closes: #477389)