@@ -1,6 +1,7 @@
 asterisk (1:1.4.21.2~dfsg-2) UNRELEASED; urgency=low
 
   * Depend on debhelper >=5 on backport etch.
+  * filter DEB_BUILD_OPTION noopt ( Closes: #492941 ).
 
  -- Victor Seva <linuxmaniac@torreviejawireless.org>  Thu, 24 Jul 2008 21:00:20 +0200
 
